--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/profile_image11"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -39,7 +39,7 @@
         android:contentDescription="@string/more_horiz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/txtUsername"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/more_horiz" />
 
@@ -70,7 +70,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/post_img"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/post_skateboard" />
+                app:srcCompat="@drawable/post_img_skateboard" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageButton2"
@@ -85,7 +85,7 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -99,7 +99,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -112,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/post_img_frame" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtCaption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -122,7 +122,7 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
     <include
         layout="@layout/post_actions"
@@ -131,6 +131,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCaption" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
