--- a/app/src/main/res/layout/post_actions.xml
+++ b/app/src/main/res/layout/post_actions.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnReact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -14,7 +14,7 @@
         android:textColor="@color/black" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -23,7 +23,7 @@
         android:textColor="@color/black" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
