Added dynamic change of profile picture in recycler view

--- a/app/src/main/res/layout/posts.xml
+++ b/app/src/main/res/layout/posts.xml
@@ -7,5 +7,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/postsView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="100dp" />
 </LinearLayout>
