--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -6,7 +6,7 @@
     android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image11"
+        android:id="@+id/imgProfilePhoto"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
@@ -27,7 +27,7 @@
         android:text="@string/user1_timeline_update"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/profile_image11"
+        app:layout_constraintStart_toEndOf="@+id/imgProfilePhoto"
         app:layout_constraintTop_toBottomOf="@+id/txtUsername" />
 
     <ImageButton
@@ -50,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image11">
+        app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -65,7 +65,7 @@
             app:cardElevation="4dp">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imgPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/post_img"
@@ -95,7 +95,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/profile_image11"
+        app:layout_constraintStart_toEndOf="@+id/imgProfilePhoto"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
