--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="@string/user1_timeline_update"
+        android:text="@string/post_timeline_update"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imgProfilePhoto"
@@ -43,26 +43,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/more_horiz" />
 
-    <FrameLayout
-        android:id="@+id/post_img_frame"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clipToPadding="true"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp"
+        app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
+        <FrameLayout
+            android:id="@+id/post_img_frame"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:clipToPadding="true"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="4dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/imgPhoto"
@@ -80,16 +81,15 @@
                 android:layout_margin="11dp"
                 android:elevation="10dp"
                 android:src="@drawable/icon_play" />
-        </androidx.cardview.widget.CardView>
-
-    </FrameLayout>
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/txtUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="@string/username1"
+        android:text="@string/post_user"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -103,13 +103,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/user1_post_title"
+        android:text="@string/post_title"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_img_frame" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
         android:id="@+id/txtCaption"
@@ -118,9 +118,10 @@
         android:layout_marginTop="12dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:text="@string/post1_caption"
+        android:text="@string/post_caption"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
@@ -138,7 +139,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="15dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
