--- a/app/src/main/res/layout/post_actions.xml
+++ b/app/src/main/res/layout/post_actions.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:drawableLeft="@drawable/ic_heart"
-        android:text="@string/post1_heart_react_count"
+        android:text="@string/post_heart_react_count"
         android:textColor="@color/black" />
 
     <Button
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:drawableLeft="@drawable/ic_icon_comment"
-        android:text="@string/post1_comment_count"
+        android:text="@string/post_comment_count"
         android:textColor="@color/black" />
 
     <Button
@@ -28,6 +28,6 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:drawableLeft="@drawable/ic_share"
-        android:text="@string/post1_share_count"
+        android:text="@string/post_share_count"
         android:textColor="@color/black" />
 </LinearLayout>
