--- a/app/src/main/res/layout/navbar.xml
+++ b/app/src/main/res/layout/navbar.xml
@@ -24,14 +24,10 @@
         android:contentDescription="@string/recordings"
         app:srcCompat="@drawable/ic_recordings" />
 
-    <ImageButton
-        android:id="@+id/imageButton5"
+    <Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/record"
-        app:srcCompat="@drawable/ic_record" />
+        android:layout_weight="1" />
 
     <ImageButton
         android:id="@+id/imageButton6"
