--- a/app/src/main/res/layout/post_actions.xml
+++ b/app/src/main/res/layout/post_actions.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:drawableLeft="@drawable/ic_heart"
+        android:drawableLeft="@drawable/ic_heart_white"
         android:text="@string/post_heart_react_count"
         android:textColor="@color/black" />
 
